# doing-sdl-right

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: basic_texture.frag  basic_texture.vert  basic_texture_rgba.frag  bicubic.frag  lanczos3.frag  long_rendering.frag  long_rendering.vert  pixel_coverage.frag  tunable_bilinear.frag
cmake/Modules/: FindSDL2.cmake
include/: DisplayWindow.hpp  Inputs.hpp  Joysticks.hpp  Renderer.hpp  Window.hpp
include/Scenes/: AccurateInputLag.hpp  GhettoInputLag.hpp  PixelArt.hpp  Scene.hpp  Scrolling.hpp
include/scenes/: Scene.hpp
src/: DisplayWindow.cpp  Inputs.cpp  Joysticks.cpp  Renderer.cpp  Window.cpp  main.cpp
src/Scenes/: AccurateInputLag.cpp  GhettoInputLag.cpp  PixelArt.cpp  Scrolling.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
